--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: sudo apt update && sudo apt install -y ninja-build
 
       - name: Set up Java
@@ -25,13 +25,21 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
 
-      - name: Build APK for Opposing Force
+      - name: Make build script executable
+        run: chmod +x scripts/android-gms.sh
+
+      - name: Run Android GMS script
+        run: ./scripts/android-gms.sh -g gearbox
+
+      - name: List contents to verify build script worked
+        run: ls -la build-android
+
+      - name: Build APK
         run: |
-          ./scripts/android-gms.sh -g gearbox
           cd build-android
           ./gradlew assembleRelease
 
-      - name: Upload APK artifact
+      - name: Upload built APK
         uses: actions/upload-artifact@v4
         with:
           name: xash3d-opfor-apk
